# PIMLSTM

./: .gitignore  CMakeLists.txt  Makefile  dev  dev.c  host  lstm.c  lstm.h  mem_manage.c  mem_manage.h  tensor.c  utils.h
